kubernetes/apps/tiny/smokeping-ingress-route-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: smokeping
  namespace: smokeping
spec:
  routes:
    - match: Host(`smokeping.tiny.heimelska.co.uk`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-infra
          namespace: traefik
